Fix: Oprava vyhľadávacieho textu na stránke hovorov

--- a/client/src/i18n/locales/sk/translation.json
+++ b/client/src/i18n/locales/sk/translation.json
@@ -160,7 +160,10 @@
     "select_client": "Vyberte klienta",
     "duration_placeholder": "Zadajte trvanie hovoru",
     "notes_placeholder": "Zadajte poznámky k hovoru",
-    "next_action_placeholder": "Zadajte ďalšiu akciu"
+    "next_action_placeholder": "Zadajte ďalšiu akciu",
+    "success_create": "Hovor bol úspešne vytvorený",
+    "error_create": "Chyba pri vytváraní hovoru",
+    "validation_error": "Neplatná hodnota"
   },
   "status": {
     "title": "Stav",
@@ -296,46 +299,30 @@
     "upcoming_calls": "Nadchádzajúce hovory"
   },
   "common": {
-    "loading": "Načítavam",
-    "unknown_client": "Neznámy klient",
-    "today": "Dnes",
-    "tomorrow": "Zajtra",
+    "loading": "Načítavam...",
+    "error": "Nastala chyba",
     "save": "Uložiť",
     "cancel": "Zrušiť",
     "edit": "Upraviť",
     "delete": "Vymazať",
-    "allRightsReserved": "Všetky práva vyhradené",
+    "confirm": "Potvrdiť",
     "back": "Späť",
-    "noClient": "Klient neexistuje",
-    "loading": "Načítavam...",
-    "saving": "Ukladám...",
-    "deleting": "Vymazávam...",
-    "submitting": "Odosielam...",
-    "success": "Úspech!",
-    "error": "Chyba!",
-    "warning": "Upozornenie!",
-    "info": "Informácia",
-    "yes": "Áno",
-    "no": "Nie",
-    "ok": "OK",
-    "close": "Zavrieť",
     "next": "Ďalej",
-    "search": "Hľadať",
-    "filter": "Filtrovať",
-    "sort": "Zoradiť",
     "view": "Zobraziť",
-    "add": "Pridať",
-    "create": "Vytvoriť",
-    "update": "Aktualizovať",
-    "details": "Detaily",
-    "more": "Viac",
-    "less": "Menej",
-    "show_more": "Zobraziť viac",
-    "show_less": "Zobraziť menej",
-    "show_all": "Zobraziť všetko",
-    "hide_all": "Skryť všetko",
-    "active": "Aktívny",
-    "inactive": "Neaktívny"
+    "noData": "Žiadne údaje",
+    "name": "Meno",
+    "email": "Email",
+    "phone": "Telefón",
+    "address": "Adresa",
+    "note": "Poznámka",
+    "search": "Vyhľadávanie",
+    "filter": "Filter",
+    "sort": "Zoradiť",
+    "noActivityYet": "Zatiaľ žiadna aktivita",
+    "allRightsReserved": "Všetky práva vyhradené",
+    "unknown_client": "Neznámy klient",
+    "today": "Dnes",
+    "tomorrow": "Zajtra"
   },
   "locale": "sk-SK",
   "call": {
@@ -372,27 +359,5 @@
     "allStats": "Všetky štatistiky",
     "showMyData": "Zobraziť iba moje údaje",
     "showAllData": "Zobraziť všetky údaje"
-  },
-  "common": {
-    "loading": "Načítavam...",
-    "error": "Nastala chyba",
-    "save": "Uložiť",
-    "cancel": "Zrušiť",
-    "edit": "Upraviť",
-    "delete": "Vymazať",
-    "confirm": "Potvrdiť",
-    "back": "Späť",
-    "next": "Ďalej",
-    "view": "Zobraziť",
-    "noData": "Žiadne údaje",
-    "name": "Meno",
-    "email": "Email",
-    "phone": "Telefón",
-    "address": "Adresa",
-    "note": "Poznámka",
-    "search": "Vyhľadávanie",
-    "filter": "Filter",
-    "sort": "Zoradiť",
-    "noActivityYet": "Zatiaľ žiadna aktivita"
   }
 } 
