Oprava filtrovania klientov, štýlov používateľských informácií a pridanie modálneho okna pre označenie firmy ako klienta

--- a/client/src/i18n/locales/sk/translation.json
+++ b/client/src/i18n/locales/sk/translation.json
@@ -14,7 +14,7 @@
   },
   "nav": {
     "home": "Domov",
-    "clients": "Klienti",
+    "clients": "Databáza firiem",
     "calls": "Hovory",
     "login": "Prihlásiť sa",
     "register": "Registrovať sa",
@@ -53,10 +53,10 @@
     "logout_success": "Boli ste úspešne odhlásení"
   },
   "clients": {
-    "title": "Klienti",
-    "subtitle": "Spravujte svojich klientov",
-    "add": "Pridať nového klienta",
-    "no_clients": "Neboli nájdení žiadni klienti",
+    "title": "Databáza firiem",
+    "subtitle": "Správa a vyhľadávanie firemných kontaktov",
+    "add": "Pridať novú firmu",
+    "no_clients": "Neboli nájdené žiadne firmy",
     "view_details": "Zobraziť detaily",
     "contact_info": "Kontaktné informácie",
     "email": "Adresa",
@@ -64,31 +64,31 @@
     "company": "Spoločnosť",
     "web": "Webová stránka",
     "web_optional": "Webová stránka (Voliteľné)",
-    "web_placeholder": "Zadajte webovú stránku klienta",
+    "web_placeholder": "Zadajte webovú stránku",
     "mail": "Kategória",
     "mail_optional": "Kategória (Voliteľné)",
-    "mail_placeholder": "Zadajte kategóriu klienta",
+    "mail_placeholder": "Zadajte kategóriu firmy",
     "postal_mail": "Email",
     "postal_mail_optional": "Email (Voliteľné)",
-    "postal_mail_placeholder": "Zadajte email klienta",
+    "postal_mail_placeholder": "Zadajte email",
     "notes": "Poznámky",
-    "back": "Späť na klientov",
+    "back": "Späť na firmy",
     "edit": "Upraviť",
     "delete": "Vymazať",
     "new_call": "Nový hovor",
     "call_history": "História hovorov",
-    "no_calls": "Pre tohto klienta neboli nájdené žiadne hovory",
+    "no_calls": "Pre túto firmu neboli nájdené žiadne hovory",
     "save": "Uložiť zmeny",
     "cancel": "Zrušiť",
-    "create": "Vytvoriť nového klienta",
+    "create": "Vytvoriť novú firmu",
     "create_subtitle": "Vyplňte nasledujúci formulár",
     "name": "Meno",
-    "name_placeholder": "Zadajte meno klienta",
-    "email_placeholder": "Zadajte adresu klienta",
-    "phone_placeholder": "Zadajte telefónne číslo klienta",
-    "company_placeholder": "Zadajte spoločnosť klienta",
+    "name_placeholder": "Zadajte meno kontaktu",
+    "email_placeholder": "Zadajte adresu",
+    "phone_placeholder": "Zadajte telefónne číslo",
+    "company_placeholder": "Zadajte názov spoločnosti",
     "company_optional": "Spoločnosť (Voliteľné)",
-    "notes_placeholder": "Zadajte poznámky o klientovi",
+    "notes_placeholder": "Zadajte poznámky",
     "notes_optional": "Poznámky (Voliteľné)",
     "rows_per_page": "Počet na stránke",
     "of": "z",
@@ -96,20 +96,35 @@
     "actions": "Akcie",
     "inactive": "Neaktívny",
     "active": "Aktívny",
-    "show_inactive": "Zobraziť neaktívnych klientov",
-    "status_updated": "Stav klienta aktualizovaný",
+    "show_inactive": "Zobraziť neaktívne firmy",
+    "status_updated": "Stav firmy aktualizovaný",
     "error_update": "Chyba pri aktualizácii klienta",
-    "deactivate": "Deaktivovať klienta",
-    "activate": "Aktivovať klienta",
-    "deleted": "Klient bol vymazaný",
-    "error_delete": "Chyba pri vymazávaní klienta",
-    "delete_confirm": "Ste si istí, že chcete vymazať tohto klienta? Táto akcia je nezvratná.",
+    "deactivate": "Deaktivovať firmu",
+    "activate": "Aktivovať firmu",
+    "deleted": "Firma bola vymazaná",
+    "error_delete": "Chyba pri vymazávaní firmy",
+    "delete_confirm": "Ste si istí, že chcete vymazať túto firmu? Táto akcia je nezvratná.",
     "warning": "Upozornenie",
-    "client_not_found": "Klient nebol nájdený alebo nie je dostupný",
-    "client_inactive_notice": "Tento klient je označený ako neaktívny",
-    "status_visibility": "Neaktívni klienti sú predvolene skrytí",
+    "client_not_found": "Firma nebola nájdená alebo nie je dostupná",
+    "client_inactive_notice": "Táto firma je označená ako neaktívna",
+    "status_visibility": "Neaktívne firmy sú predvolene skryté",
     "refresh_data": "Obnoviť dáta",
-    "refreshing": "Obnovovanie dát..."
+    "refreshing": "Obnovovanie dát...",
+    "is_client": "Je klientom",
+    "is_not_client": "Nie je klientom",
+    "mark_as_client": "Označiť ako klienta",
+    "unmark_as_client": "Odznačiť ako klienta",
+    "client_status_updated": "Status klienta bol aktualizovaný",
+    "client_since": "Klientom od",
+    "filter_clients": "Zobraziť iba klientov",
+    "filter_all": "Zobraziť všetky firmy",
+    "client_indicator": "Klient",
+    "all_companies": "Všetky firmy",
+    "only_clients": "Klienti",
+    "refresh": "Obnoviť",
+    "add_to_clients_title": "Pridanie medzi klientov",
+    "successful_call_add_client": "Hovor bol úspešný. Chcete pridať túto firmu medzi vašich klientov?",
+    "added_to_clients": "Firma bola pridaná medzi klientov"
   },
   "calls": {
     "title": "Hovory",
@@ -163,7 +178,10 @@
     "next_action_placeholder": "Zadajte ďalšiu akciu",
     "success_create": "Hovor bol úspešne vytvorený",
     "error_create": "Chyba pri vytváraní hovoru",
-    "validation_error": "Neplatná hodnota"
+    "validation_error": "Neplatná hodnota",
+    "call_created": "Hovor úspešne vytvorený",
+    "create_new_call": "Vytvoriť nový hovor",
+    "enter_call_details": "Zadajte detaily hovoru"
   },
   "status": {
     "title": "Stav",
@@ -189,7 +207,7 @@
     "other": "Iné"
   },
   "buttons": {
-    "view_clients": "Zobraziť klientov",
+    "view_clients": "Zobraziť databázu firiem",
     "view_calls": "Zobraziť hovory",
     "view_calendar": "Zobraziť kalendár"
   },
@@ -316,13 +334,21 @@
     "address": "Adresa",
     "note": "Poznámka",
     "search": "Vyhľadávanie",
-    "filter": "Filter",
+    "filter": "Filtrovať",
     "sort": "Zoradiť",
     "noActivityYet": "Zatiaľ žiadna aktivita",
     "allRightsReserved": "Všetky práva vyhradené",
     "unknown_client": "Neznámy klient",
     "today": "Dnes",
-    "tomorrow": "Zajtra"
+    "tomorrow": "Zajtra",
+    "yes": "Áno",
+    "no": "Nie",
+    "ok": "OK",
+    "close": "Zatvoriť",
+    "submit": "Odoslať",
+    "success": "Úspech",
+    "more": "Viac",
+    "send": "Odoslať"
   },
   "locale": "sk-SK",
   "call": {
